syntax = "proto3";

option csharp_namespace = "FibonacciGRPC";

package fibonacci;

service Fibonacci {
  rpc FindFibonacci (FibonacciRequest) returns (FibonacciResult);
  rpc StreamFibonacci (FibonacciRequest) returns (stream FibonacciResult);
}

message FibonacciRequest {
  int32 number = 1;
}

message FibonacciResult {
  string result = 1;
}
